(library
 (name typed_ppxlib_ocaml_driver)
 (public_name typed_ppxlib.ocaml.driver)
 (flags
  (:standard
   -w
   -9
   -open
   Typed_ppxlib_ocaml_utils
   -open
   Typed_ppxlib_ocaml_stdlib
   -open
   Typed_ppxlib_ocaml_parsing
   -open
   Typed_ppxlib_ocaml_typing))
 (libraries
  typed_ppxlib_ocaml_utils
  typed_ppxlib_ocaml_stdlib
  typed_ppxlib_ocaml_parsing
  typed_ppxlib_ocaml_typing))
