(library
 (name typed_ppxlib_ocaml_parsing)
 (public_name typed_ppxlib.ocaml.parsing)
 (flags
  (:standard
   -w
   -9
   -open
   Typed_ppxlib_ocaml_utils
   -open
   Typed_ppxlib_ocaml_stdlib))
 (libraries
  ocaml-compiler-libs.common
  ocaml-migrate-parsetree
  typed_ppxlib_ocaml_utils
  typed_ppxlib_ocaml_stdlib))
