(library
 (name typed_ppxlib_ocaml_typing)
 (public_name typed_ppxlib.ocaml.typing)
 (modules_without_implementation annot outcometree lambda debuginfo)
 (flags
  (:standard
   -w
   -9
   -open
   Typed_ppxlib_ocaml_utils
   -open
   Typed_ppxlib_ocaml_stdlib
   -open
   Typed_ppxlib_ocaml_parsing))
 (libraries
  typed_ppxlib_ocaml_utils
  typed_ppxlib_ocaml_stdlib
  typed_ppxlib_ocaml_parsing))
